objects/ADM_Forecast_Page_Customization__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>ADM_Forecasting Page Latest Comment column configurable Width &amp; Color Coding.</description>
    <fields>
        <fullName>Color_Coding__c</fullName>
        <description>ADM_Forecasting Page Forecast values configurable color coding.</description>
        <inlineHelpText>Standard Colors
WHITE	#FFFFFF
SILVER	#C0C0C0
GRAY	#808080
BLACK	#000000
RED	#FF0000
MAROON	#800000
YELLOW	#FFFF00
OLIVE	#808000
LIME	#00FF00
GREEN	#008000
AQUA	#00FFFF
TEAL	#008080
BLUE	#0000FF
NAVY	#000080
FUCHSIA	#FF00FF
PURPLE	#800080</inlineHelpText>
        <label>Color Coding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Width__c</fullName>
        <description>ADM_Forecasting Page Latest Comment column configurable width with numbers.</description>
        <inlineHelpText>ADM_Forecasting Page Latest Comment column configurable width with numbers.
Min width : 150</inlineHelpText>
        <label>Comment Width</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GuiFcstDay__c</fullName>
        <label>GuiFcstDay</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>ADM_Forecast_Page_Customization</label>
</CustomObject>